--- a/contact.html
+++ b/contact.html
@@ -23,13 +23,12 @@
       }
     </style>
 
-    <header class="bg-black-90 fixed w-100 ph3 pv3 pv4-ns ph4-m ph5-l">
+    <header class="fixed w-100 ph3 pv3 pv4-ns ph4-m ph5-l" style="background:whitesmoke;box-shadow: 0 0 1px rgba(0,0,0,0.5);z-index:99999;">
       <nav class="f6 fw6 ttu tracked">
-        <a class="link dim white dib mr3" href="/index.html" title="Home">DRONE TRACKING TECHNOLOGIES</a>
-        <a class="link dim white dib mr3 blue" href="/products.html" title="About">Products</a>
-        <a class="link dim white dib mr3 blue" href="/services.html" title="About">Services</a>
-        <a class="link dim white dib mr3 blue" href="/about.html" title="Store">About</a>
-        <a class="link dim white dib blue" href="/contact.html" title="Contact">Contact</a>
+        <a class="link dim white dib mr3" href="/index.html" title="Home" style="color: #bfbfbf; font-weight: 800;">DRONE TRACKING TECHNOLOGIES</a>
+        <a class="link dim white dib fr" href="/contact.html" style="color: #6ecbc7; text-decoration: underline;" title="Contact">Contact</a>
+        <a class="link dim white dib mr3 fr" href="/about.html" style="color: #bfbfbf;" title="Store">About</a>
+        <a class="link dim white dib mr3 fr" href="/products.html" style="color: #bfbfbf;" title="About">Products</a>
       </nav>
     </header>
 
@@ -41,7 +40,7 @@
           DRONE TRACKING TECHNOLOGIES
         </h1>
         <h2 class="f3 mid-gray lh-title">
-          Contact: <a href="mailto:support@dronetrackingtechnologies.com">support@dronetrackingtechnologies.com</a>
+          Contact: <a href="mailto:support@dronetrackingtechnologies.com" class="gray">support@dronetrackingtechnologies.com</a>
         </h2>
         <time class="f6 ttu tracked gray"></time>
       </header>
@@ -66,32 +65,25 @@
       </div>
     </article>
 
-    <footer class="pa4 pa5-l black-70 bt" style="background: rgba(11, 25, 59, 0.9);border-top: 74px solid #f2f2f2;">
+    <footer class="pa4 pa5-l black-70 bt" style="background: rgba(59, 114, 120, 0.9);border-top: 74px solid #f2f2f2;">
       <div class="mb4-l cf">
         <h1 class="fl w-100 pv0 f6 fw6 ttu tracked mb4 white">DRONE TRACKING TECHNOLOGIES</h1>
         <article class="fl w-50 dib-ns w-auto-ns mr4-m mr5-l mb4 pr2 pr0-ns">
           <a class="f6 db fw6 pv3 white link dim" href="/index.html">
             HOME
           </a>
-          <a class="f6 db fw6 pv3 white link dim" href="/about.html">
-            ABOUT
-          </a>
           <a class="f6 db fw6 pv3 white link dim" href="/products.html">
             PRODUCTS
-          </a>
-        </article>
-        <article class="fl w-50 dib-ns w-auto-ns mr4-m mr5-l mb4 pl2 pl0-ns">
-          <a class="f6 db fw6 pv3 white link dim" href="/services.html">
-            SERVICES
           </a>
           <a class="f6 db fw6 pv3 white link dim" href="/contact.html">
             CONTACT
           </a>
+          <a class="f6 db fw6 pv3 white link dim" href="/about.html">
+            ABOUT
+          </a>
           <a class="f6 db fw6 pv3 white link dim" href="/privacy.html">
             PRIVACY
           </a>
-        </article>
-        <article class="fl w-50 dib-ns w-auto-ns mr4-m mr5-l mb4 pr2 pr0-ns">
         </article>
         <article class="fl w-50 dib-ns w-auto-ns mb4 pl2 pl0-ns">
         </article>
@@ -101,9 +93,6 @@
           <p class="f7 white dib pr3 mb3">
             Copyright © DRONE TRACKING TECHNOLOGIES LTD 2019
           </p>
-        </div>
-        <div class="db dtc-ns black-70 tc tr-ns v-mid">
-          <a href="https://www.tx11.co.uk" class="link dim dib white">DRONE TRACKING TECHNOLOGIES</a>
         </div>
       </div>
       <div class="db dn-ns">
