--- a/products.html
+++ b/products.html
@@ -22,123 +22,121 @@
         border: none;
         background: rgba(11, 25, 59, 0.9);
       }
+      .selected {
+        color: #6ecbc7;
+        text-decoration: underline;
+        font-weight: 800;
+      }
     </style>
 
-    <header class="bg-black-90 fixed w-100 ph3 pv3 pv4-ns ph4-m ph5-l">
+    <header class="fixed w-100 ph3 pv3 pv4-ns ph4-m ph5-l" style="background:whitesmoke;box-shadow: 0 0 1px rgba(0,0,0,0.5);z-index:99999;">
       <nav class="f6 fw6 ttu tracked">
-        <a class="link dim white dib mr3" href="/index.html" title="Home">DRONE TRACKING TECHNOLOGIES</a>
-        <a class="link dim white dib mr3 blue" href="/products.html" title="About">Products</a>
-        <a class="link dim white dib mr3 blue" href="/services.html" title="About">Services</a>
-        <a class="link dim white dib mr3 blue" href="/about.html" title="Store">About</a>
-        <a class="link dim white dib blue" href="/contact.html" title="Contact">Contact</a>
+        <a class="link dim white dib mr3" href="/index.html" title="Home" style="color: #bfbfbf; font-weight: 800;">DRONE TRACKING TECHNOLOGIES</a>
+        <a class="link dim white dib fr" href="/contact.html" style="color: #bfbfbf;" title="Contact">Contact</a>
+        <a class="link dim white dib mr3 fr" href="/about.html" style="color: #bfbfbf;" title="Store">About</a>
+        <a class="link dim white dib mr3 fr" href="/products.html" style="color: #6ecbc7; text-decoration: underline;" title="About">Products</a>
       </nav>
     </header>
 
-    <br /><br /><br /><br />
+    <article class="vh-100 dt w-100 bg-dark-pink" style="background: url(/images/mesh2.png); background-size: cover;">
+      <div class="dtc v-mid tc white ph3 ph4-l">
+        <h1 class="f6 f2-m f-subheadline-l fw6 tc" style="color:gray;">TELESCOPE</h1>
+        <h2 class="mt0">PORTABLE DRONE DETECTION DEVICE</h2>
+      </div>
+    </article>
 
-    <div class="flex items-center justify-center pa4 bg-lightest-blue navy enterprise-info">
+    <!-- <br /><br /><br /><br /> -->
+
+    <!--<div class="flex items-center justify-center pa4 bg-lightest-blue navy enterprise-info">
       <svg class="w1" data-icon="info" viewBox="0 0 32 32" style="fill:currentcolor">
         <title>info icon</title>
         <path d="M16 0 A16 16 0 0 1 16 32 A16 16 0 0 1 16 0 M19 15 L13 15 L13 26 L19 26 z M16 6 A3 3 0 0 0 16 12 A3 3 0 0 0 16 6"></path>
       </svg>
       <span class="lh-title ml3">Contact us for a demo</span>
-    </div>
+    </div>-->
 
-    <article class="cf ph3 ph5-ns pv5" style="padding-top:111px;">
+
+    <article class="cf ph3 ph5-ns pv5 semi-white">
       <header class="fn fl-ns w-50-ns pr4-ns">
         <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
-          F-Series
+          TELESCOPE
         </h1>
-        <img src="/images/vad1.png" />
-        <article class="pa3 pa5-ns tl" data-name="slab-stat-large">
-          <h3 class="f6 ttu tracked tl">The F-series is an affordable and flexible solution for computer vision detection that can be installed and integrated with zero fuss.</h3>
-        </article>
-      </header>
-      <div class="fn fl-ns w-50-ns">
-        <header class="fn fl-ns w-50-ns pr4-ns">
-          <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
-          </h1>
-          <article data-name="slab-stat-large">
-            <p class="f7 mt4 tl" style="font-size: 1em;">The F-Series drone system is a self contained system designed to work offline and without updates.</p>
-            <p class="f7 mt4 tl" style="font-size: 1em;">
-              Advanced optical drone detection <br /><br />
-              Advanced acoustic drone detection <br /><br />
-              Fully configurable via web dashboad (via an onboard wifi access point)  <br /><br />
-              Options for custom alerting: sms, email, REST, GPIO  <br /><br />
-              Works offline (works without updates or internet connection)  <br /><br />
-              500GB internal video storage  <br /><br />
-              Lightweight portable design  <br /><br />
-              Various battery capacity options for UPS module  <br /><br />
-              500m IR illumination  <br /><br />
-              Optional GSM Module <br /><br />
-              180 degree field of view <br /><br />
-              <br /><br />
-              £3000 excluding VAT <br /><br />
-              upgrade for full 360 degree field of view + £2000
-            </p>
-          </article>
-      </div>
-    </article>
-
-    <article class="cf ph3 ph5-ns pv5" style="padding-top:111px;">
-      <header class="fn fl-ns w-50-ns pr4-ns">
-        <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
-          P-Series
-        </h1>
-        <img src="/images/vad2.png" />
-        <article class="pa3 pa5-ns" data-name="slab-stat-large">
-          <h3 class="f6 ttu tracked">The P-series is an affordable and flexible, portable solution for drone detection that can be setup and online with zero fuss.</h3>
-        </article>
-
-      </header>
-      <div class="fn fl-ns w-50-ns">
-        <header class="fn fl-ns w-50-ns pr4-ns">
-          <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
-          </h1>
-          <article data-name="slab-stat-large">
-            <p class="f7 mt4 tl" style="font-size: 1em;"></p>
-            <p class="f7 mt4 tl" style="font-size: 1em;">
-              Advanced optical drone detection <br /><br />
-              Advanced acoustic drone detection <br /><br />
-              Fully configurable via web dashboad (via an onboard wifi access point)  <br /><br />
-              Options for custom alerting: sms, email, REST, GPIO  <br /><br />
-              Works offline (works without updates or internet connection)  <br /><br />
-              500GB internal video storage  <br /><br />
-              Lightweight portable design  <br /><br />
-              Various battery capacity options for UPS module  <br /><br />
-              500m IR illumination  <br /><br />
-              Optional GSM Module <br /><br />
-              180 degree field of view <br /><br /><br /><br />
-
-              £3000 excluding VAT <br /><br />
-              upgrade for full 360 degree field of view + £2000
-            </p>
-          </article>
-      </div>
-    </article>
-
-    <article class="cf ph3 ph5-ns pv5" style="background:#e1e1e1;">
-      <header class="fn fl-ns w-50-ns pr4-ns">
-        <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
-          State of the art drone detection
-        </h1>
+        <h2 class="f3 mid-gray lh-title">
+          PORTABLE DRONE DETECTION DEVICE
+        </h2>
         <time class="f6 ttu tracked gray"></time>
+        <p class="f5 lh-copy measure mt0-ns">
+          The TELESCOPE drone detection device is a fully self contained and portable drone detection device combining
+          radio, audio and optical detection capabilites. The TELESCOPE device has two microphone inputs that accept
+           a range of different microphone peripherals. It also has an inbuilt infra red camera with
+           automated drone detection capable of working in day and night.
+           <br /><br />
+
+        </p>
       </header>
-      <div class="fn fl-ns w-50-ns">
-        <h2>Drone detection with machine learning</h2>
-        <h2>Audio detection</h2>
-        <p>
-          The common argument against audio detection is that it is easily tricked by urban background noises and won't work beyond 50 meters. These are exactly the kind of challenges we where faced with but using machine learning its possible to get amazing results. We are happy to say that these are no longer issues for us as we can use audio detection as a robust companion to video detection.</p>
-        </p>
+      <div class="fn fl-ns w-50-ns tc">
+        <img src="/images/telescope.jpg" />
+      </div>
+    </article>
 
-        <h2>Video detection</h2>
-        <p>
-        We also successfully track drones, day or night and at distance using cameras. Needless to say our system is never fooled by birds or other flying objects. We use infra-red cameras to save costs and avoid using thermal cameras completely.
-        <br /><br />
-        We also have the ability to run our video drone detection on your existing video feeds. If you have invested a lot in your camera and surveillance infrastructure you can make that investment go further. This is one of the major reasons we decided to focus on making our drone detection system work effectively on commodity hardware.
-        </p>
+    <article class="cf ph3 ph5-ns pv5 semi-white" style="background:#e1e1e1;">
+      <header class="fn fl-ns w-50-ns pr4-ns">
+        <time class="f6 ttu tracked gray"></time>
+        <article class="pa3 pa5-ns">
+        <ul class="list pl0 ml0 center mw6 ba b--light-silver br2">
+          <li class="ph3 pv3 bb b--light-silver">In built HD wide angle camera</li>
+          <li class="ph3 pv3 bb b--light-silver">Radio (RF) SMA connection</li>
+          <li class="ph3 pv3 bb b--light-silver">Two microphone inputs</li>
+          <li class="ph3 pv3 bb b--light-silver">On board wifi hotspot and web interface</li>
+          <li class="ph3 pv3 bb b--light-silver">2 assignable relay outputs</li>
+          <li class="ph3 pv3 bb b--light-silver">IP68 fully potted enclosure</li>
+          <li class="ph3 pv3 bb b--light-silver">Optional pole mounting kit</li>
+          <li class="ph3 pv3 bb b--light-silver">L = 200mm, W = 120mm, D = 75mm</li>
+          <li class="ph3 pv3 bb b--light-silver">Weight 2.5Kg</li>
+        </ul>
+      </article>
+      </header>
+      <div class="fn fl-ns w-50-ns tc vh-100" style="padding-top: 3em;">
+        <img src="/images/geom.png" class="v-mid" />
+      </div>
+    </article>
 
+    <article class="cf ph3 ph5-ns pv5 semi-white">
+      <div class="fn fl-ns w-50-ns tc">
+        <img src="/images/cube.jpg" />
+      </div>
+      <header class="fn fl-ns w-50-ns pr4-ns">
+        <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
+          OMNI DIRECTIONAL MICROPHONE ATTACHMENT
+        </h1>
+        <h2 class="f3 mid-gray lh-title">
+          AUDIO DRONE DETECTION SENSOR
+        </h2>
+        <time class="f6 ttu tracked gray"></time>
+        <p class="f5 lh-copy measure mt0-ns">
+          Completely water proof omni directional microphone attachment for the TELESCOPE drone detection device.
+           This microphone is intended to be used with standard satellite dishes to become an effective parabolic
+           microphone with a range of up to 500 meters.
         </p>
+      </header>
+    </article>
+
+    <article class="cf ph3 ph5-ns pv5 semi-white">
+      <header class="fn fl-ns w-50-ns pr4-ns">
+        <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
+          SHOTGUN MICROPHONE ATTACHMENT
+        </h1>
+        <h2 class="f3 mid-gray lh-title">
+          AUDIO DRONE DETECTION SENSOR
+        </h2>
+        <time class="f6 ttu tracked gray"></time>
+        <p class="f5 lh-copy measure mt0-ns">
+          This shotgun micriphone detachment provides precise audio recording with sound isolation up
+           around 200 meters.
+        </p>
+      </header>
+      <div class="fn fl-ns w-50-ns tc">
+        <img src="/images/cube.jpg" />
       </div>
     </article>
 
@@ -160,32 +158,25 @@
       </article>
     </section>
 
-    <footer class="pa4 pa5-l black-70 bt" style="background: rgba(11, 25, 59, 0.9);border-top: 74px solid #f2f2f2;">
+    <footer class="pa4 pa5-l black-70 bt" style="background: rgba(59, 114, 120, 0.9);border-top: 74px solid #f2f2f2;">
       <div class="mb4-l cf">
         <h1 class="fl w-100 pv0 f6 fw6 ttu tracked mb4 white">DRONE TRACKING TECHNOLOGIES</h1>
         <article class="fl w-50 dib-ns w-auto-ns mr4-m mr5-l mb4 pr2 pr0-ns">
           <a class="f6 db fw6 pv3 white link dim" href="/index.html">
             HOME
           </a>
-          <a class="f6 db fw6 pv3 white link dim" href="/about.html">
-            ABOUT
-          </a>
           <a class="f6 db fw6 pv3 white link dim" href="/products.html">
             PRODUCTS
-          </a>
-        </article>
-        <article class="fl w-50 dib-ns w-auto-ns mr4-m mr5-l mb4 pl2 pl0-ns">
-          <a class="f6 db fw6 pv3 white link dim" href="/services.html">
-            SERVICES
           </a>
           <a class="f6 db fw6 pv3 white link dim" href="/contact.html">
             CONTACT
           </a>
+          <a class="f6 db fw6 pv3 white link dim" href="/about.html">
+            ABOUT
+          </a>
           <a class="f6 db fw6 pv3 white link dim" href="/privacy.html">
             PRIVACY
           </a>
-        </article>
-        <article class="fl w-50 dib-ns w-auto-ns mr4-m mr5-l mb4 pr2 pr0-ns">
         </article>
         <article class="fl w-50 dib-ns w-auto-ns mb4 pl2 pl0-ns">
         </article>
@@ -195,9 +186,6 @@
           <p class="f7 white dib pr3 mb3">
             Copyright © DRONE TRACKING TECHNOLOGIES LTD 2019
           </p>
-        </div>
-        <div class="db dtc-ns black-70 tc tr-ns v-mid">
-          <a href="https://www.tx11.co.uk" class="link dim dib white">DRONE TRACKING TECHNOLOGIES</a>
         </div>
       </div>
       <div class="db dn-ns">
