--- a/products.html
+++ b/products.html
@@ -38,7 +38,7 @@
       </nav>
     </header>
 
-    <article class="vh-100 dt w-100 bg-dark-pink" style="background: url(/images/mesh2.png); background-size: cover;">
+    <article class="vh-100 dt w-100 bg-dark-pink" style="background: #222;">
       <div class="dtc v-mid tc white ph3 ph4-l">
         <h1 class="f6 f2-m f-subheadline-l fw6 tc" style="color:gray;">TELESCOPE</h1>
         <h2 class="mt0">PORTABLE DRONE DETECTION DEVICE</h2>
