--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <a class="link dim white dib mr3 fr" href="/products.html" style="color: #bfbfbf;" title="About">Products</a>
     </nav>
   </header>
-  <article class="vh-100 dt w-100 bg-dark-pink" style="background: url(/images/mesh.png); background-size: cover;">
+  <article class="vh-100 dt w-100 bg-dark-pink" style="background: #222;">
     <div class="dtc v-mid tc white ph3 ph4-l">
       <h1 class="f6 f2-m f-subheadline-l fw6 tc">TELESCOPE</h1>
       <h2 class="mt0">PORTABLE DRONE DETECTION DEVICE</h2>
