--- a/about.html
+++ b/about.html
@@ -48,14 +48,10 @@
       <div class="fn fl-ns w-50-ns">
 
         <p class="f5 lh-copy measure mt0-ns">
-          Drone Tracking Technologies LTD is a UK company formed in 2019 with a strong focus on research and development. Drone Tracking Technologies (DTT) make drone detection systems that are flexible and help individuals and companies respond effectively to dynamic threats.
+          Drone Tracking Technologies LTD is a UK company formed in 2019 with a strong focus on research and development. Drone Tracking Technologies (DTT) make drone detection systems that are flexible and help our customers respond effectively to dynamic threats.
 
         </p>
         <br/><br/>
-        <p class="f5 lh-copy measure mt0-ns">
-          DTT systems aim to be configurable, 'set and forget' systems that are designed to do one thing well. Thanks for being part of the Drone Tracking Technologies adventure as we continue to improve and experiment. We hope to continue building useful computer vision systems that anyone can use.
-        </p>
-
         <br/><br/>
         <br/><br/>
         <h2>GET IN TOUCH FOR A DEMO AND QUOTE</h2>
