--- a/products.html
+++ b/products.html
@@ -66,10 +66,10 @@
         </h2>
         <time class="f6 ttu tracked gray"></time>
         <p class="f5 lh-copy measure mt0-ns">
-          The TELESCOPE drone detection device is a fully self contained and portable drone detection device combining
-          radio, audio and optical detection capabilites. The TELESCOPE device has two microphone inputs that accept
-           a range of different microphone peripherals. It also has an inbuilt infra red camera with
-           automated drone detection capable of working in day and night.
+          TELESCOPE is a self contained and portable drone detection device combining
+          radio, audio and optical detection capabilites that does not need to connect to the internet in order to operate.
+          The TELESCOPE device has two microphone inputs that accept a range of different microphone peripherals.
+          It also has an inbuilt infra red camera with automated drone detection capable of working in day and night.
            <br /><br />
 
         </p>
