--- a/products.html
+++ b/products.html
@@ -71,7 +71,6 @@
           The TELESCOPE device has two microphone inputs that accept a range of different microphone peripherals.
           It also has an inbuilt infra red camera with automated drone detection capable of working in day and night.
            <br /><br />
-
         </p>
       </header>
       <div class="fn fl-ns w-50-ns tc">
@@ -79,26 +78,12 @@
       </div>
     </article>
 
-    <article class="cf ph3 ph5-ns pv5 semi-white" style="background:#e1e1e1;">
-      <header class="fn fl-ns w-50-ns pr4-ns">
-        <time class="f6 ttu tracked gray"></time>
-        <article class="pa3 pa5-ns">
-        <ul class="list pl0 ml0 center mw6 ba b--light-silver br2">
-          <li class="ph3 pv3 bb b--light-silver">In built HD wide angle camera</li>
-          <li class="ph3 pv3 bb b--light-silver">Radio (RF) SMA connection</li>
-          <li class="ph3 pv3 bb b--light-silver">Two microphone inputs</li>
-          <li class="ph3 pv3 bb b--light-silver">On board wifi hotspot and web interface</li>
-          <li class="ph3 pv3 bb b--light-silver">2 assignable relay outputs</li>
-          <li class="ph3 pv3 bb b--light-silver">IP68 fully potted enclosure</li>
-          <li class="ph3 pv3 bb b--light-silver">Optional pole mounting kit</li>
-          <li class="ph3 pv3 bb b--light-silver">L = 200mm, W = 120mm, D = 75mm</li>
-          <li class="ph3 pv3 bb b--light-silver">Weight 2.5Kg</li>
-        </ul>
-      </article>
-      </header>
-      <div class="fn fl-ns w-50-ns tc vh-100" style="padding-top: 3em;">
-        <img src="/images/geom.png" class="v-mid" />
-      </div>
+    <article class="cf ph3 ph5-ns pv5 semi-white">
+      <iframe src="https://player.vimeo.com/video/316920018" width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    </article>
+
+    <article class="cf ph3 ph5-ns pv5 semi-white">
+<iframe src="https://player.vimeo.com/video/315626090" width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </article>
 
     <article class="cf ph3 ph5-ns pv5 semi-white">
