--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
       font-size: 1.1em;
       margin-left: 1.4em;
     }
+    .gradient {
+background: #ffedbc; /* Old browsers */
+background: -moz-linear-gradient(-45deg, #ffedbc 12%, #5cf2c2 47%, #325f82 73%, #dbf3fc 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(-45deg, #ffedbc 12%,#5cf2c2 47%,#325f82 73%,#dbf3fc 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(135deg, #ffedbc 12%,#5cf2c2 47%,#325f82 73%,#dbf3fc 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffedbc', endColorstr='#dbf3fc',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+    }
   </style>
   <header class="fixed w-100 ph3 pv3 pv4-ns ph4-m ph5-l" style="background:whitesmoke;box-shadow: 0 0 1px rgba(0,0,0,0.5);z-index:99999;">
     <nav class="f6 fw6 ttu tracked">
@@ -44,7 +51,7 @@
       <a class="link dim white dib mr3 fr" href="/products.html" style="color: #bfbfbf;" title="About">Products</a>
     </nav>
   </header>
-  <article class="vh-100 dt w-100 bg-dark-pink" style="background: #222;">
+  <article class="vh-100 dt w-100 gradient">
     <div class="dtc v-mid tc white ph3 ph4-l">
       <h1 class="f6 f2-m f-subheadline-l fw6 tc">TELESCOPE</h1>
       <h2 class="mt0">PORTABLE DRONE DETECTION DEVICE</h2>
