--- a/about.html
+++ b/about.html
@@ -40,17 +40,41 @@
         <h1 class="f2 lh-title fw9 mb3 mt0 pt3 bt bw2">
           DRONE TRACKING TECHNOLOGIES
         </h1>
-        <h2 class="f3 mid-gray lh-title">
-          About
-        </h2>
         <time class="f6 ttu tracked gray"></time>
       </header>
       <div class="fn fl-ns w-50-ns">
-
+        <h2 class="f3 mid-gray lh-title">
+          About
+        </h2>
         <p class="f5 lh-copy measure mt0-ns">
           Drone Tracking Technologies LTD is a UK company formed in 2019 with a strong focus on research and development. Drone Tracking Technologies (DTT) make drone detection systems that are flexible and help our customers respond effectively to dynamic threats.
-
         </p>
+
+        <h2 class="f3 mid-gray lh-title">
+          Team
+        </h2>
+        <article class="mw5 tl bg-white br3 pa3 pa4-ns mv3 ba b--black-10" style="box-shadow: 0 0 40px rgba(0,0,0,0.2);">
+          <div class="tc">
+            <img src="/images/icon.png" class="br-100 h3 w3 dib" title="chris">
+            <h1 class="f4">Chris</h1>
+            <hr class="mw3 bb bw1 b--black-10">
+          </div>
+          <p class="lh-copy measure center f6 black-70">
+            Co-founder and Engineer.
+          </p>
+        </article>
+        <br /><br />
+        <article class="mw5 tl bg-white br3 pa3 pa4-ns mv3 ba b--black-10" style="box-shadow: 0 0 40px rgba(0,0,0,0.2);">
+          <div class="tc">
+            <img src="/images/icon.png" class="br-100 h3 w3 dib" title="m-onz">
+            <h1 class="f4">m-onz</h1>
+            <hr class="mw3 bb bw1 b--black-10">
+          </div>
+          <p class="lh-copy measure center f6 black-70">
+            Co-founder and Engineer
+          </p>
+          <a class="f4 fw6 db black link dim" href="https://github.com/m-onz">m-onz on github</a>
+        </article>
         <br/><br/>
         <br/><br/>
         <br/><br/>
